<resources>
    <string name="app_name">News</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="news_image">News Image</string>
    <string name="news_photo">News Photo</string>
    <string name="description">Description</string>
    <string name="content">Content</string>
    <string name="more_read">More Read</string>
    <string name="title">Title</string>
    <string name="publish">Publish</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news_title">News Title</string>
</resources>